admin profile update action

--- a/theme/admin/less/admin.less
+++ b/theme/admin/less/admin.less
@@ -17,6 +17,14 @@ body{
   padding-left: 0;
 }
 
+.admin-general-form{
+  label{
+    width: 8em;
+    margin-right: 12px;
+    display: inline-block;
+  }
+}
+
 #admin-menu{
   height: 100%;
   width: 200px;
