--- a/theme/admin/css/admin.css
+++ b/theme/admin/css/admin.css
@@ -267,22 +267,34 @@ ol {
   display: table;
   clear: both;
 }
+fieldset {
+  border: 1px solid #DDD;
+  background-color: #F8F8F8;
+  padding: 12px;
+}
 input[type=text],
+input[type=url],
 input[type=password],
 input[type=email],
-input[type=search] {
+input[type=search],
+textarea {
   padding: 6px 12px;
   outline: none;
   border: 1px #D0E2EA solid;
-  transition: border linear .2s;
   min-height: 32px;
 }
 input[type=text]:focus,
+input[type=url]:focus,
 input[type=password]:focus,
 input[type=email]:focus,
-input[type=search]:focus {
+input[type=search]:focus,
+textarea:focus {
   background-color: #fffded;
   border: 1px #888 solid;
+}
+textarea {
+  min-width: 100px;
+  min-height: 80px;
 }
 input[type=submit],
 input[type=button],
@@ -294,7 +306,6 @@ button {
   background-color: #5BA4E5;
   min-height: 32px;
   color: #FFF;
-  transition: background linear .2s;
 }
 input[type=submit]:hover,
 input[type=button]:hover,
@@ -316,6 +327,11 @@ body {
 }
 .admin-pager li a {
   padding: 4px 8px;
+}
+.admin-general-form label {
+  width: 8em;
+  margin-right: 12px;
+  display: inline-block;
 }
 #admin-menu {
   height: 100%;
@@ -450,4 +466,21 @@ body {
   background-color: #444;
   border-color: #444;
   color: #FAFAFA;
+}
+#profile-base-form {
+  width: 579px;
+}
+#profile-base-form .field {
+  margin-bottom: 18px;
+}
+#profile-base-form .field input {
+  width: 450px;
+  height: 36px;
+}
+#profile-base-form #bio {
+  width: 546px;
+  height: 200px;
+}
+#profile-base-form .field.submit {
+  text-align: right;
 }
