--- a/theme/admin/css/login.css
+++ b/theme/admin/css/login.css
@@ -267,22 +267,34 @@ ol {
   display: table;
   clear: both;
 }
+fieldset {
+  border: 1px solid #DDD;
+  background-color: #F8F8F8;
+  padding: 12px;
+}
 input[type=text],
+input[type=url],
 input[type=password],
 input[type=email],
-input[type=search] {
+input[type=search],
+textarea {
   padding: 6px 12px;
   outline: none;
   border: 1px #D0E2EA solid;
-  transition: border linear .2s;
   min-height: 32px;
 }
 input[type=text]:focus,
+input[type=url]:focus,
 input[type=password]:focus,
 input[type=email]:focus,
-input[type=search]:focus {
+input[type=search]:focus,
+textarea:focus {
   background-color: #fffded;
   border: 1px #888 solid;
+}
+textarea {
+  min-width: 100px;
+  min-height: 80px;
 }
 input[type=submit],
 input[type=button],
@@ -294,7 +306,6 @@ button {
   background-color: #5BA4E5;
   min-height: 32px;
   color: #FFF;
-  transition: background linear .2s;
 }
 input[type=submit]:hover,
 input[type=button]:hover,
