--- a/theme/admin/less/admin.less
+++ b/theme/admin/less/admin.less
@@ -25,6 +25,16 @@ body{
   }
 }
 
+.success-notice{
+  font-weight: bold;
+  color: #16b544;
+}
+
+.fail-notice{
+  font-weight: bold;
+  color: #de3d3d;
+}
+
 #admin-menu{
   height: 100%;
   width: 200px;
