--- a/theme/admin/less/user.less
+++ b/theme/admin/less/user.less
@@ -15,3 +15,30 @@
     text-align: right;
   }
 }
+
+#profile-base-form,
+#profile-pwd-form{
+  float: left;
+}
+
+#profile-pwd-form{
+  margin-left: 40px;
+  .field{
+    input{
+      height: 36px;
+    }
+    margin-bottom: 18px;
+  }
+  .field.submit{
+    text-align: right;
+    button{
+      background-color: #ff745f;
+      &:hover{
+        background-color: #ff5a41 ;
+      }
+    }
+  }
+  border:1px solid #decccd;
+  background-color: #fff4f7;
+  padding: 12px 20px;
+}
