--- a/theme/admin/css/admin.css
+++ b/theme/admin/css/admin.css
@@ -475,6 +475,26 @@ body {
   border-color: #444;
   color: #FAFAFA;
 }
+#article-write-form {
+  padding-top: 24px;
+}
+#article-write-form #article-title {
+  border: none;
+  margin-bottom: 12px;
+  font-size: 18px;
+  width: 100%;
+  height: 40px;
+}
+#article-write-form button.submit {
+  float: right;
+}
+#article-write-form input[name=tags] {
+  width: 500px;
+  margin-right: 12px;
+}
+#article-write-form label input {
+  margin-right: 8px;
+}
 #profile-base-form {
   width: 579px;
 }
