--- a/theme/admin/less/article.less
+++ b/theme/admin/less/article.less
@@ -78,3 +78,26 @@
     color: #FAFAFA;
   }
 }
+
+#article-write-form{
+  padding-top: 24px;
+  #article-title{
+    border: none;
+    margin-bottom: 12px;
+    font-size: 18px;
+    width: 100%;
+    height: 40px;
+  }
+  button.submit{
+    float: right;
+  }
+  input[name=tags]{
+    width: 500px;
+    margin-right: 12px;
+  }
+  label{
+    input{
+      margin-right: 8px;
+    }
+  }
+}
