--- a/theme/admin/less/article.less
+++ b/theme/admin/less/article.less
@@ -95,9 +95,14 @@
     width: 500px;
     margin-right: 12px;
   }
+  input[name=slug]{
+    width: 800px;
+  }
   label{
+    min-width: 3em;
+    display: inline-block;
     input{
-      margin-right: 8px;
+      margin:0 8px;
     }
   }
 }
